@@ -1,5 +1,10 @@
 2008-06-23  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
 
+	* src/core/exmpp_jid.erl: Remove the function to_ejabberd_short_jid/1.
+	This is really an internal format and it doesn't belong to exmpp.
+
+2008-06-23  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
+
 	* src/core/exmpp_jid.erl: Add functions to convert to and from
 	ejabberd normal and short JID forms.
 
